check if branch correct

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
+    "#branch loda\n",
     "dataset_path = \"../dataset/mlcourse-dota2-win-prediction/train_features.csv\""
    ]
   },
