--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
       "      dtype='object', length=246)\n",
       "[ 2  3  4  5 12 16 22 23]\n",
       "39675\n",
-      "31762\n",
+      "3564\n",
       "408\n",
       "25795\n",
       "5967\n",
@@ -47,7 +47,7 @@
     "print(df.columns)\n",
     "print(np.unique(df[\"game_mode\"]))\n",
     "print(len(df[\"game_mode\"]))\n",
-    "print(len(df[df[\"game_mode\"]==22]))\n",
+    "print(len(df[df[\"game_mode\"]==4]))\n",
     "df_22 = df[df[\"game_mode\"]==22]\n",
     "print(len(df[df[\"game_mode\"]==2]))\n",
     "df_2 = df[df[\"game_mode\"]==2]\n",
@@ -64,17 +64,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          match_id_hash  game_time  game_mode  lobby_type  \\\n",
+      "0      a400b8f29dece5f4d266f49f1ae2e98a        155         22           7   \n",
+      "1      b9c57c450ce74a2af79c9ce96fac144d        658          4           0   \n",
+      "2      6db558535151ea18ca70a6892197db41         21         23           0   \n",
+      "3      46a0ddce8f7ed2a8d9bd5edcbb925682        576         22           7   \n",
+      "4      b1b35ff97723d9b7ade1c9c3cf48f770        453         22           7   \n",
+      "...                                 ...        ...        ...         ...   \n",
+      "39670  defd0caeed6ea83d7d5fbdec013fe7d1       1783         22           0   \n",
+      "39671  bc7a87ed5f9c2bca55f9f7a93da0b0c5        377         22           7   \n",
+      "39672  e2ca68ac1a6847f4a37f6c9c8ee8695b        643         22           7   \n",
+      "39673  47ad6454ede66c1c78fdaa9391dfc556       2405         22           7   \n",
+      "39674  9928dfde50efcbdb2055da23dcdbc101       1775         22           0   \n",
+      "\n",
+      "       objectives_len  chat_len  r1_hero_id  r1_kills  r1_deaths  r1_assists  \\\n",
+      "0                   1        11          11         0          0           0   \n",
+      "1                   3        10          15         7          2           0   \n",
+      "2                   0         0         101         0          0           0   \n",
+      "3                   1         4          14         1          0           3   \n",
+      "4                   1         3          42         0          1           1   \n",
+      "...               ...       ...         ...       ...        ...         ...   \n",
+      "39670               8        23           3         1          9           9   \n",
+      "39671               1         0          14         0          2           1   \n",
+      "39672               1        23          63         1          4           0   \n",
+      "39673              12         4          22         3          8          14   \n",
+      "39674              10        13          32         3          4          15   \n",
+      "\n",
+      "       ...   d5_stuns  d5_creeps_stacked  d5_camps_stacked  d5_rune_pickups  \\\n",
+      "0      ...   0.000000                  0                 0                0   \n",
+      "1      ...   0.000000                  0                 0                0   \n",
+      "2      ...   0.000000                  0                 0                0   \n",
+      "3      ...   8.664527                  3                 1                3   \n",
+      "4      ...   0.000000                  2                 1                2   \n",
+      "...    ...        ...                ...               ...              ...   \n",
+      "39670  ...  26.493834                  6                 2                3   \n",
+      "39671  ...   0.000000                  0                 0                1   \n",
+      "39672  ...   2.532715                  0                 0                3   \n",
+      "39673  ...  17.583984                  3                 1                4   \n",
+      "39674  ...   8.331238                  0                 0                1   \n",
+      "\n",
+      "       d5_firstblood_claimed  d5_teamfight_participation  d5_towers_killed  \\\n",
+      "0                          0                      0.0000                 0   \n",
+      "1                          0                      0.0000                 0   \n",
+      "2                          0                      0.0000                 0   \n",
+      "3                          0                      0.0000                 0   \n",
+      "4                          0                      0.2500                 0   \n",
+      "...                      ...                         ...               ...   \n",
+      "39670                      0                      0.5625                 0   \n",
+      "39671                      0                      0.0000                 0   \n",
+      "39672                      1                      0.5000                 0   \n",
+      "39673                      0                      0.6250                 0   \n",
+      "39674                      0                      0.5500                 1   \n",
+      "\n",
+      "       d5_roshans_killed  d5_obs_placed  d5_sen_placed  \n",
+      "0                      0              0              0  \n",
+      "1                      0              0              0  \n",
+      "2                      0              0              0  \n",
+      "3                      0              2              0  \n",
+      "4                      0              0              0  \n",
+      "...                  ...            ...            ...  \n",
+      "39670                  0              7              2  \n",
+      "39671                  0              0              0  \n",
+      "39672                  0              1              0  \n",
+      "39673                  0              0              0  \n",
+      "39674                  0              0              0  \n",
+      "\n",
+      "[39675 rows x 246 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "print(df[\"\"])"
+    "print(df)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "machine-learning",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -88,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
