removed games where game_time = 0
created notebokes with generalized hero in team features.

And first train of random forest for feature importance

co-featured Cyclops

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,21 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(32170, 242)\n"
+      "(32153, 242)\n"
      ]
     }
    ],
    "source": [
     "column_to_drop = [\"match_id_hash\",\"lobby_type\",\"chat_len\",\"game_mode\"] #\"objectives_len\"\n",
     "\n",
-    "filter = \"game_mode == 2 or game_mode == 22\" # 2 standard ranked or 22 captain mode\n",
+    "filter = \"(game_mode == 2 or game_mode == 22) and game_time > 0\" # 2 standard ranked or 22 captain mode\n",
     "\n",
     "df = df.query(filter)\n",
     "\n",
