refactor model notebook to remove unnecessary output and streamline code execution

--- a/code/model.ipynb
+++ b/code/model.ipynb
@@ -351,25 +351,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(32153, 64)\n",
-      "(32153,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "win = target[\"radiant_win\"].astype(int)\n",
-    "X = np.array(df.values)\n",
-    "Y = np.array(win)\n",
-    "\n",
-    "print(X.shape)\n",
-    "print(Y.shape)"
+    "win = target[\"radiant_win\"].astype(int)"
    ]
   },
   {
