--- a/code/feature_importance.ipynb
+++ b/code/feature_importance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "from dataset_functions import *\n",
-    "np.random.seed(seed=10)"
+    "seed = 10\n",
+    "np.random.seed(seed=seed)"
    ]
   },
   {
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +233,7 @@
    "source": [
     "X_train,X_test,Y_train,Y_test = train_test_split(df_playerstats_playerheros,win,test_size=0.2)\n",
     "\n",
-    "feature_selector = RandomForestClassifier(max_depth=10,class_weight=\"balanced\")\n",
+    "feature_selector = RandomForestClassifier(max_depth=10,class_weight=\"balanced\",  random_state=seed)\n",
     "feature_selector.fit(X_train,Y_train)\n",
     "\n",
     "Y_pred = feature_selector.predict(X_test)\n",
