--- a/code/feature_importance.ipynb
+++ b/code/feature_importance.ipynb
@@ -233,7 +233,7 @@
    "source": [
     "X_train,X_test,Y_train,Y_test = train_test_split(df_playerstats_playerheros,win,test_size=0.2)\n",
     "\n",
-    "feature_selector = RandomForestClassifier(max_depth=10,class_weight=\"balanced\",  random_state=seed)\n",
+    "feature_selector = RandomForestClassifier(max_depth=10,class_weight=\"balanced\", random_state=seed)\n",
     "feature_selector.fit(X_train,Y_train)\n",
     "\n",
     "Y_pred = feature_selector.predict(X_test)\n",
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -316,8 +316,7 @@
    "source": [
     "X_train, X_test, Y_train, Y_test = train_test_split(df_playerstats_teamheros, win, test_size=0.2)\n",
     "\n",
-    "# Initialize and train the RandomForestClassifier\n",
-    "feature_selector = RandomForestClassifier(max_depth=10, class_weight=\"balanced\")\n",
+    "# train the RandomForestClassifier\n",
     "feature_selector.fit(X_train, Y_train)\n",
     "\n",
     "# Make predictions and evaluate the model\n",
@@ -373,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -390,8 +389,7 @@
    "source": [
     "X_train, X_test, Y_train, Y_test = train_test_split(df_teamstats_teamheros, win, test_size=0.2)\n",
     "\n",
-    "# Initialize and train the RandomForestClassifier\n",
-    "feature_selector = RandomForestClassifier(max_depth=10, class_weight=\"balanced\")\n",
+    "# train the RandomForestClassifier\n",
     "feature_selector.fit(X_train, Y_train)\n",
     "\n",
     "# Make predictions and evaluate the model\n",
@@ -435,6 +433,15 @@
     "plt.figure(figsize=(20, 10))\n",
     "plot_tree(tree, max_depth=2, feature_names=df_teamstats_teamheros.columns)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proi"
    ]
   }
  ],
