--- a/code/feature_importance.ipynb
+++ b/code/feature_importance.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,10 +227,8 @@
     "\n",
     "    return feature_selector\n",
     "\n",
-    "def feature_selection(\n",
+    "def feature_importance(\n",
     "        feature_selector:RandomForestClassifier,\n",
-    "        threshold: float,\n",
-    "        X_train:pd.DataFrame,\n",
     "        X_test:pd.DataFrame,\n",
     "        Y_test:pd.DataFrame\n",
     "    ):\n",
@@ -265,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +283,7 @@
     "X_train,X_test,Y_train,Y_test = train_test_split(df_playerstats_playerheros,win,test_size=0.2)\n",
     "\n",
     "feature_selector = fit_feature_selector(X_train,Y_train)\n",
-    "feature_selection(feature_selector,0.01,X_train,X_test,Y_test)"
+    "feature_importance(feature_selector,0.01,X_train,X_test,Y_test)"
    ]
   },
   {
@@ -321,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +340,7 @@
     "\n",
     "# Train the RandomForestClassifier\n",
     "feature_selector = fit_feature_selector(X_train,Y_train)\n",
-    "feature_selection(feature_selector, 0.01, X_train, X_test, Y_test)"
+    "feature_importance(feature_selector, 0.01, X_train, X_test, Y_test)"
    ]
   },
   {
@@ -378,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +398,7 @@
     "# train the RandomForestClassifier\n",
     "feature_selector = fit_feature_selector(X_train,Y_train)\n",
     "\n",
-    "feature_selection(feature_selector, 0.01, X_train, X_test, Y_test)"
+    "feature_importance(feature_selector, 0.01, X_train, X_test, Y_test)"
    ]
   },
   {
@@ -458,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +478,7 @@
     "X_train, X_test, Y_train, Y_test = train_test_split(df_teamstats_teamheros_mean_position, win, test_size=0.2)\n",
     "feature_selector = fit_feature_selector(X_train,Y_train)\n",
     "\n",
-    "feature_selection(feature_selector, 0.01, X_train, X_test, Y_test)"
+    "feature_importance(feature_selector, 0.01, X_train, X_test, Y_test)"
    ]
   },
   {
@@ -492,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +512,7 @@
     "X_train, X_test, Y_train, Y_test = train_test_split(df_teamstats_teamheros_weighted_mean_position, win, test_size=0.2)\n",
     "feature_selector = fit_feature_selector(X_train,Y_train)\n",
     "\n",
-    "feature_selection(feature_selector, 0.01, X_train, X_test, Y_test)"
+    "feature_importance(feature_selector, 0.01, X_train, X_test, Y_test)"
    ]
   },
   {
