fixed feature_importance function

--- a/code/feature_importance.ipynb
+++ b/code/feature_importance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,19 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accouracy:\t 0.7076659928471466\n",
-      "Roc Auc:\t 0.7040132921658935\n",
-      "Most Important:\n",
-      " ['r2_y', 'r4_y', 'r1_y', 'r5_x', 'd2_x', 'd3_y', 'r4_x', 'r3_y', 'r1_x', 'r2_x']\n",
-      "Least Important:\n",
-      " ['r3_hero_id_63', 'r3_hero_id_61', 'r2_hero_id_113', 'r2_hero_id_73', 'r2_hero_id_55', 'r2_hero_id_45', 'r1_hero_id_112', 'r1_hero_id_82', 'r1_hero_id_66', 'r1_hero_id_51']\n"
+     "ename": "TypeError",
+     "evalue": "feature_importance() takes 3 positional arguments but 4 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m X_train,X_test,Y_train,Y_test \u001b[38;5;241m=\u001b[39m train_test_split(df_playerstats_playerheros,win,test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m)\n\u001b[0;32m      3\u001b[0m feature_selector \u001b[38;5;241m=\u001b[39m fit_feature_selector(X_train,Y_train)\n\u001b[1;32m----> 4\u001b[0m \u001b[43mfeature_importance\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfeature_selector\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0.01\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43mY_test\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: feature_importance() takes 3 positional arguments but 4 were given"
      ]
     }
    ],
@@ -283,12 +282,12 @@
     "X_train,X_test,Y_train,Y_test = train_test_split(df_playerstats_playerheros,win,test_size=0.2)\n",
     "\n",
     "feature_selector = fit_feature_selector(X_train,Y_train)\n",
-    "feature_importance(feature_selector,0.01,X_train,X_test,Y_test)"
+    "feature_importance(feature_selector,0.01,X_test,Y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -340,12 +339,12 @@
     "\n",
     "# Train the RandomForestClassifier\n",
     "feature_selector = fit_feature_selector(X_train,Y_train)\n",
-    "feature_importance(feature_selector, 0.01, X_train, X_test, Y_test)"
+    "feature_importance(feature_selector, X_test, Y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -398,12 +397,12 @@
     "# train the RandomForestClassifier\n",
     "feature_selector = fit_feature_selector(X_train,Y_train)\n",
     "\n",
-    "feature_importance(feature_selector, 0.01, X_train, X_test, Y_test)"
+    "feature_importance(feature_selector, X_test, Y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -422,16 +421,6 @@
     "plt.figure(figsize=(20, 10))\n",
     "plot_tree(tree, max_depth=2, feature_names=df_teamstats_teamheros.columns)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df = team_mean_position_transform(df)\n",
-    "#df = team_weighted_mean_position_transform(df)"
    ]
   },
   {
@@ -475,10 +464,11 @@
    "source": [
     "df_teamstats_teamheros_mean_position = df_teamstats_teamheros.copy()\n",
     "df_teamstats_teamheros_mean_position = team_mean_position_transform(df_teamstats_teamheros_mean_position)\n",
+    "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(df_teamstats_teamheros_mean_position, win, test_size=0.2)\n",
     "feature_selector = fit_feature_selector(X_train,Y_train)\n",
     "\n",
-    "feature_importance(feature_selector, 0.01, X_train, X_test, Y_test)"
+    "feature_importance(feature_selector, X_test, Y_test)"
    ]
   },
   {
@@ -490,29 +480,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accouracy:\t 0.7145078525890219\n",
-      "Roc Auc:\t 0.7118901800690312\n",
+      "Accouracy:\t 0.7062665215363085\n",
+      "Roc Auc:\t 0.7034946040914\n",
       "Most Important:\n",
-      " ['radiant_Weighted_avg_y', 'dire_Weighted_avg_y', 'radiant_Weighted_avg_x', 'dire_Weighted_avg_x', 'd_towers_killed', 'r_kills', 'r_towers_killed', 'd_deaths', 'd_kills', 'r_deaths']\n",
+      " ['radiant_Weighted_avg_x', 'dire_Weighted_avg_y', 'radiant_Weighted_avg_y', 'dire_Weighted_avg_x', 'd_towers_killed', 'r_kills', 'r_deaths', 'd_kills', 'r_towers_killed', 'd_deaths']\n",
       "Least Important:\n",
-      " ['d_77', 'r_80', 'd_82', 'r_82', 'd_107', 'd_80', 'd_55', 'r_66', 'r_55', 'd_66']\n"
+      " ['d_55', 'd_113', 'r_89', 'r_82', 'r_66', 'd_82', 'd_80', 'r_60', 'd_66', 'r_55']\n"
      ]
     }
    ],
    "source": [
     "df_teamstats_teamheros_weighted_mean_position = df_teamstats_teamheros.copy()\n",
     "df_teamstats_teamheros_weighted_mean_position = team_weighted_mean_position_transform(df_teamstats_teamheros_weighted_mean_position)\n",
+    "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(df_teamstats_teamheros_weighted_mean_position, win, test_size=0.2)\n",
     "feature_selector = fit_feature_selector(X_train,Y_train)\n",
     "\n",
-    "feature_importance(feature_selector, 0.01, X_train, X_test, Y_test)"
+    "feature_importance(feature_selector, X_test, Y_test)"
    ]
   },
   {
