--- a/code/random_forest.ipynb
+++ b/code/random_forest.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "params = {\n",
     "    'n_estimators': [100,200,250],\n",
-    "    'class_weigth': ['balanced'],\n",
+    "    'class_weight': ['balanced'],\n",
     "    'criterion': ['entropy','gini'],\n",
     "}\n",
     "\n",
