--- a/code/feature_importance.ipynb
+++ b/code/feature_importance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,18 +263,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "feature_importance() takes 3 positional arguments but 4 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m X_train,X_test,Y_train,Y_test \u001b[38;5;241m=\u001b[39m train_test_split(df_playerstats_playerheros,win,test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m)\n\u001b[0;32m      3\u001b[0m feature_selector \u001b[38;5;241m=\u001b[39m fit_feature_selector(X_train,Y_train)\n\u001b[1;32m----> 4\u001b[0m \u001b[43mfeature_importance\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfeature_selector\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0.01\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43mY_test\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: feature_importance() takes 3 positional arguments but 4 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accouracy:\t 0.7076659928471466\n",
+      "Roc Auc:\t 0.7040132921658935\n",
+      "Most Important:\n",
+      " ['r2_y', 'r4_y', 'r1_y', 'r5_x', 'd2_x', 'd3_y', 'r4_x', 'r3_y', 'r1_x', 'r2_x']\n",
+      "Least Important:\n",
+      " ['r3_hero_id_63', 'r3_hero_id_61', 'r2_hero_id_113', 'r2_hero_id_73', 'r2_hero_id_55', 'r2_hero_id_45', 'r1_hero_id_112', 'r1_hero_id_82', 'r1_hero_id_66', 'r1_hero_id_51']\n"
      ]
     }
    ],
@@ -282,12 +283,12 @@
     "X_train,X_test,Y_train,Y_test = train_test_split(df_playerstats_playerheros,win,test_size=0.2)\n",
     "\n",
     "feature_selector = fit_feature_selector(X_train,Y_train)\n",
-    "feature_importance(feature_selector,0.01,X_test,Y_test)"
+    "feature_importance(feature_selector,X_test,Y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -375,19 +376,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accouracy:\t 0.7106204322811382\n",
-      "Roc Auc:\t 0.7064614782006087\n",
+      "Accouracy:\t 0.7107759290934536\n",
+      "Roc Auc:\t 0.7085871397509711\n",
       "Most Important:\n",
-      " ['d_towers_killed', 'r_towers_killed', 'r_deaths', 'd_kills', 'd_deaths', 'r_kills', 'r1_y', 'r_gold', 'r5_x', 'd_gold']\n",
+      " ['r_towers_killed', 'r_deaths', 'd_towers_killed', 'r_kills', 'd_kills', 'd_deaths', 'r5_x', 'r5_y', 'd_gold', 'r4_x']\n",
       "Least Important:\n",
-      " ['r_65', 'd_52', 'd_83', 'r_55', 'r_80', 'd_82', 'r_73', 'r_82', 'd_66', 'r_66']\n"
+      " ['d_85', 'r_89', 'r_90', 'd_38', 'r_65', 'r_73', 'd_65', 'd_80', 'r_55', 'd_66']\n"
      ]
     }
    ],
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -445,19 +446,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accouracy:\t 0.7071995024102006\n",
-      "Roc Auc:\t 0.7051819474810029\n",
+      "Accouracy:\t 0.7176177888353289\n",
+      "Roc Auc:\t 0.7137139171051241\n",
       "Most Important:\n",
-      " ['dire_avg_y', 'radiant_avg_x', 'radiant_avg_y', 'dire_avg_x', 'd_towers_killed', 'r_towers_killed', 'd_kills', 'r_kills', 'r_deaths', 'd_deaths']\n",
+      " ['dire_avg_y', 'radiant_avg_x', 'radiant_avg_y', 'dire_avg_x', 'd_towers_killed', 'd_kills', 'r_kills', 'r_deaths', 'd_deaths', 'r_towers_killed']\n",
       "Least Important:\n",
-      " ['r_103', 'r_112', 'r_83', 'r_66', 'd_80', 'd_60', 'd_55', 'r_85', 'r_55', 'd_66']\n"
+      " ['r_82', 'r_113', 'd_82', 'r_80', 'd_66', 'd_55', 'd_65', 'r_66', 'r_89', 'r_55']\n"
      ]
     }
    ],
@@ -480,19 +481,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accouracy:\t 0.7062665215363085\n",
-      "Roc Auc:\t 0.7034946040914\n",
+      "Accouracy:\t 0.7145078525890219\n",
+      "Roc Auc:\t 0.7118901800690312\n",
       "Most Important:\n",
-      " ['radiant_Weighted_avg_x', 'dire_Weighted_avg_y', 'radiant_Weighted_avg_y', 'dire_Weighted_avg_x', 'd_towers_killed', 'r_kills', 'r_deaths', 'd_kills', 'r_towers_killed', 'd_deaths']\n",
+      " ['radiant_Weighted_avg_y', 'dire_Weighted_avg_y', 'radiant_Weighted_avg_x', 'dire_Weighted_avg_x', 'd_towers_killed', 'r_kills', 'r_towers_killed', 'd_deaths', 'd_kills', 'r_deaths']\n",
       "Least Important:\n",
-      " ['d_55', 'd_113', 'r_89', 'r_82', 'r_66', 'd_82', 'd_80', 'r_60', 'd_66', 'r_55']\n"
+      " ['d_77', 'r_80', 'd_82', 'r_82', 'd_107', 'd_80', 'd_55', 'r_66', 'r_55', 'd_66']\n"
      ]
     }
    ],
