--- a/code/feature_selection.ipynb
+++ b/code/feature_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,7 @@
     "from dataset_functions import *\n",
     "from sklearn.metrics import roc_auc_score, accuracy_score\n",
     "from sklearn.model_selection import train_test_split\n",
-    "seed=10\n",
-    "np.random.seed(seed=10)"
+    "seed=10"
    ]
   },
   {
@@ -24,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fit_feature_selector(X_train,Y_train):\n",
-    "    feature_selector = RandomForestClassifier(max_depth=10,random_state=seed)\n",
+    "    feature_selector = RandomForestClassifier(max_depth=10,class_weight=\"balanced\",random_state=seed)\n",
     "\n",
     "    feature_selector.fit(X_train,Y_train)\n",
     "    return feature_selector\n",
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,15 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accouracy: 0.7099984450318768\n",
-      "Roc-Auc: 0.7175545192717485\n"
+      "Accouracy: 0.7107759290934536\n",
+      "Roc-Auc: 0.7106534120114317\n"
      ]
     }
    ],
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -173,8 +172,8 @@
      "text": [
       "Shape Tranformation:\n",
       " (25722, 294) -> (25722, 46)\n",
-      "Accouracy: 0.7151298398382833\n",
-      "Roc-Auc: 0.7211080158572238\n"
+      "Accouracy: 0.7188617633338517\n",
+      "Roc-Auc: 0.7191383583899008\n"
      ]
     }
    ],
@@ -193,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,15 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accouracy: 0.7163738143368061\n",
-      "Roc-Auc: 0.7235879979180918\n"
+      "Accouracy: 0.7174622920230135\n",
+      "Roc-Auc: 0.7172626297857931\n"
      ]
     }
    ],
@@ -229,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -238,8 +237,8 @@
      "text": [
       "Shape Tranformation:\n",
       " (25722, 278) -> (25722, 31)\n",
-      "Accouracy: 0.7140413621520759\n",
-      "Roc-Auc: 0.7181880753808316\n"
+      "Accouracy: 0.7213497123308972\n",
+      "Roc-Auc: 0.7211851467369682\n"
      ]
     }
    ],
@@ -258,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,15 +275,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accouracy: 0.7182397760845902\n",
-      "Roc-Auc: 0.725853359660529\n"
+      "Accouracy: 0.712330897216607\n",
+      "Roc-Auc: 0.7111524034454015\n"
      ]
     }
    ],
@@ -294,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -302,9 +301,9 @@
      "output_type": "stream",
      "text": [
       "Shape Tranformation:\n",
-      " (25722, 278) -> (25722, 31)\n",
-      "Accouracy: 0.7160628207121754\n",
-      "Roc-Auc: 0.7209378893203777\n"
+      " (25722, 278) -> (25722, 32)\n",
+      "Accouracy: 0.712797387653553\n",
+      "Roc-Auc: 0.7117144151118376\n"
      ]
     }
    ],
@@ -1253,6 +1252,253 @@
     "Y_pred  = model.predict(sf.transform(X_test))\n",
     "print(accuracy_score(Y_pred,Y_test))\n",
     "print(roc_auc_score(Y_pred,Y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature Selection with PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "pca_95 = PCA(n_components=0.95)\n",
+    "pca_99 = PCA(n_components=0.99)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape Tranformation:\n",
+      " (32153, 294) -> (32153, 47)\n",
+      "Shape Tranformation:\n",
+      " (32153, 278) -> (32153, 31)\n",
+      "Shape Tranformation:\n",
+      " (32153, 278) -> (32153, 31)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_tt = feature_selection_transform(df_tt,win,0.01)\n",
+    "df_mp = feature_selection_transform(df_mp,win,0.01)\n",
+    "df_wmp = feature_selection_transform(df_wmp,win,0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Team Stats - Team Heros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.710464935468823\n",
+      "Roc-Auc: 0.7126663546145278\n",
+      "Shape: (32153, 25)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_tt_95 = pca_95.fit_transform(scaler.fit_transform(df_tt))\n",
+    "\n",
+    "model = RandomForestClassifier(max_depth=10,random_state=seed)\n",
+    "X_train,X_test,Y_train,Y_test = train_test_split(df_tt_95,win,test_size=0.2)\n",
+    "\n",
+    "model.fit(X_train,Y_train)\n",
+    "\n",
+    "Y_pred  = model.predict(X_test)\n",
+    "print(\"Accuracy:\",accuracy_score(Y_pred,Y_test))\n",
+    "print(\"Roc-Auc:\",roc_auc_score(Y_pred,Y_test))\n",
+    "\n",
+    "print(\"Shape:\",df_tt_95.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7176177888353289\n",
+      "Roc-Auc: 0.7209414486337664\n",
+      "Shape: (32153, 32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_tt_99 = pca_99.fit_transform(scaler.fit_transform(df_tt))\n",
+    "\n",
+    "model = RandomForestClassifier(max_depth=10,random_state=seed)\n",
+    "X_train,X_test,Y_train,Y_test = train_test_split(df_tt_99,win,test_size=0.2)\n",
+    "\n",
+    "model.fit(X_train,Y_train)\n",
+    "\n",
+    "Y_pred  = model.predict(X_test)\n",
+    "print(\"Accuracy:\",accuracy_score(Y_pred,Y_test))\n",
+    "print(\"Roc-Auc:\",roc_auc_score(Y_pred,Y_test))\n",
+    "\n",
+    "print(\"Shape:\",df_tt_99.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Team Mean Positions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7061110247239931\n",
+      "Roc-Auc: 0.7099359239507557\n",
+      "Shape: (32153, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_mp_95 = pca_95.fit_transform(scaler.fit_transform(df_mp))\n",
+    "\n",
+    "model = RandomForestClassifier(max_depth=10,random_state=seed)\n",
+    "X_train,X_test,Y_train,Y_test = train_test_split(df_mp_95,win,test_size=0.2)\n",
+    "\n",
+    "model.fit(X_train,Y_train)\n",
+    "\n",
+    "Y_pred  = model.predict(X_test)\n",
+    "print(\"Accuracy:\",accuracy_score(Y_pred,Y_test))\n",
+    "print(\"Roc-Auc:\",roc_auc_score(Y_pred,Y_test))\n",
+    "\n",
+    "print(\"Shape:\",df_mp_95.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7138858653397605\n",
+      "Roc-Auc: 0.7159971603181395\n",
+      "Shape: (32153, 18)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_mp_99 = pca_99.fit_transform(scaler.fit_transform(df_mp))\n",
+    "\n",
+    "model = RandomForestClassifier(max_depth=10,random_state=seed)\n",
+    "X_train,X_test,Y_train,Y_test = train_test_split(df_mp_99,win,test_size=0.2)\n",
+    "\n",
+    "model.fit(X_train,Y_train)\n",
+    "\n",
+    "Y_pred  = model.predict(X_test)\n",
+    "print(\"Accuracy:\",accuracy_score(Y_pred,Y_test))\n",
+    "print(\"Roc-Auc:\",roc_auc_score(Y_pred,Y_test))\n",
+    "\n",
+    "print(\"Shape:\",df_mp_99.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Team Weighted Mean Positions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7188617633338517\n",
+      "Roc-Auc: 0.7177715106126797\n",
+      "Shape: (32153, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_wmp_95 = pca_95.fit_transform(scaler.fit_transform(df_wmp))\n",
+    "\n",
+    "model = RandomForestClassifier(max_depth=10,random_state=seed)\n",
+    "X_train,X_test,Y_train,Y_test = train_test_split(df_wmp_95,win,test_size=0.2)\n",
+    "\n",
+    "model.fit(X_train,Y_train)\n",
+    "\n",
+    "Y_pred  = model.predict(X_test)\n",
+    "print(\"Accuracy:\",accuracy_score(Y_pred,Y_test))\n",
+    "print(\"Roc-Auc:\",roc_auc_score(Y_pred,Y_test))\n",
+    "\n",
+    "print(\"Shape:\",df_wmp_95.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.715440833462914\n",
+      "Roc-Auc: 0.7183761150096812\n",
+      "Shape: (32153, 18)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_wmp_99 = pca_99.fit_transform(scaler.fit_transform(df_wmp))\n",
+    "\n",
+    "model = RandomForestClassifier(max_depth=10,random_state=seed)\n",
+    "X_train,X_test,Y_train,Y_test = train_test_split(df_wmp_99,win,test_size=0.2)\n",
+    "\n",
+    "model.fit(X_train,Y_train)\n",
+    "\n",
+    "Y_pred  = model.predict(X_test)\n",
+    "print(\"Accuracy:\",accuracy_score(Y_pred,Y_test))\n",
+    "print(\"Roc-Auc:\",roc_auc_score(Y_pred,Y_test))\n",
+    "\n",
+    "print(\"Shape:\",df_wmp_99.shape)"
    ]
   }
  ],
