final fix markdown

--- a/code/feature_importance.ipynb
+++ b/code/feature_importance.ipynb
@@ -27,9 +27,9 @@
    "metadata": {},
    "source": [
     "# Preprocessing \n",
-    "Feature *chat_len*  dropped (not useful ).\n",
+    "Feature *chat_len*  dropped (not useful).\n",
     "\n",
-    "Feature *match_id_hash* dropped.\n",
+    "Feature *match_id_hash* dropped (not useful).\n",
     "\n",
     "Feature *lobby_type* dropped (only 0 or 7 appears which means public and ranked matchmaking, we consider both but the feature does not give us important meaning so we drop it)\n",
     "\n",
