--- a/code/feature_importance.ipynb
+++ b/code/feature_importance.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#branch loda\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -18,7 +17,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "from dataset_functions import *\n",
-    "seed = 10  #10\n",
+    "seed = 10  \n",
     "np.random.seed(seed=seed)"
    ]
   },
@@ -524,7 +523,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "machine-learning",
    "language": "python",
    "name": "python3"
   },
@@ -538,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
